# text-processing-fast-api

./: .env.local  .gitignore  Dockerfile  Makefile  README.md  README_en.md  docker-compose.yml  pyproject.toml
src/: main.py
src/text_processing_fast_api/: main.py
src/text_processing_fast_api/api/v1/: __init__.py
src/text_processing_fast_api/api/v1/text/: endpoints.py  schemas.py
src/text_processing_fast_api/core/di/: __init__.py
src/text_processing_fast_api/models/: __init__.py  user_request.py
src/text_processing_fast_api/repositories/: base.py  user_request.py
src/text_processing_fast_api/services/: text_processing.py
src/text_processing_fast_api/settings/: __init__.py
