[project]
name = "text-processing-fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Odra",email = "odravison.amaral@loggi.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)"
]

[tool.poetry]
packages = [{include = "text_processing_fast_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
