[project]
name = "text-processing-fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Odra",email = "odravison.amaral@loggi.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "uvicorn (>=0,<1)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
]

[tool.poetry]
packages = [{include = "text_processing_fast_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src", "tests"]
exclude = ["migrations", "proto"]
line-length = 99
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "PT",  # flake8-pytest-style
    "N",   # pep8-naming
    "C90", # mccabe
]
fixable = ["ALL"]
